# NexDome_Beaver

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  INSTALL.md  README  README.md  RELEASE NOTES  RELEASE_NOTES.md  VERSION  VERSION.cmake  beaver_dome.cpp  beaver_dome.h  config.h.cmake  indi_beaver.xml.cmake
